Created and implemented custom QuantityInput component

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ html {
 h1, h2, h3, h4, h5, h6 {
   @apply font-manrope font-bold
 }
+
+input[type="number"]::-webkit-inner-spin-button, 
+input[type="number"]::-webkit-outer-spin-button { 
+  -webkit-appearance: none;
+  margin: 0;
+}
