--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html {
-  @apply font-manrope
+  @apply font-manrope;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  @apply font-manrope font-bold
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply font-manrope font-bold;
 }
 
-input[type="number"]::-webkit-inner-spin-button, 
-input[type="number"]::-webkit-outer-spin-button { 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
